Updated feedback section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -593,7 +593,10 @@
                                     <span>Baku</span>
                             </div>
                         </div>
-                        <p>Səbuhi Azərbaycanda proqramlaşdırmanın talehini dəyişəcək potensiyalı olan həm kod həvəsinə, həm götürmə qabiliyətinə, həm istedadına, malik pure cavan kadırdı. Uğurlar arzulayıram!</p>
+                        <p>Sabuhi is a naturally gifted young talent in Azerbaijan with the potential to transform the future of programming in the country. He has a deep passion for code, a sharp learning ability, and remarkable talent. I wish him all the
+                            best!
+                        </p>
+                        <span class="feedbacks-date">24 Dec 2021</span>
                     </div>
                 </div>
                 <div class="feedbacks_items col-md-6 col-sm-12">
@@ -608,6 +611,7 @@
                             </div>
                         </div>
                         <p>{{feedback.feedback_detail}}</p>
+                        <span class="feedbacks-date">12 Jan 2022</span>
                     </div>
                     {%endfor%}
                 </div>
